# MandekbrotSetZoom

./: Cargo.toml  README.md
src/: complex.rs  cpu.rs  gpu.rs  main.rs  mandelbrot.rs  palette.rs
src/cpu/: mandelbrot.rs
src/gpu/: mandelbrot.ocl
