[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpu = ["dep:ocl"]

[dependencies]
ocl = { version = "0.19.4", optional = true }
rayon = { version = "1.7.0" }
sdl2 = "0.35.2"

[profile.release]
codegen-units = 1
